bugfix visibility of step hint

--- a/src/styles/_tour.scss
+++ b/src/styles/_tour.scss
@@ -42,7 +42,6 @@ $step-border: black;
   left: -0.8em;
   top: -0.8em;
   z-index: 1001;
-  display: flex;
   justify-content: center;
   font-size: small;
   text-align: center;
